--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "@jiaminghi/data-view": "^2.10.0",
     "@mapgis/cesium": "^16.2.2",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
